--- a/hospidieuBack/src/main/resources/application.properties
+++ b/hospidieuBack/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Correction bug :
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 # Connexion BDD :
 spring.datasource.url=jdbc:mysql://localhost:3306/hospidieu
