liste utilisateurs terminée

--- a/hospidieuBack/src/main/resources/application.properties
+++ b/hospidieuBack/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+spring.datasource.url=jdbc:mysql://127.0.0.1/hospidieu
+spring.datasource.username=root
+spring.datasource.password=9D7896N6
