--- a/hospidieuBack/pom.xml
+++ b/hospidieuBack/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!--Dependance validation à ajouter-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
