--- a/hospidieuBack/src/main/resources/application.properties
+++ b/hospidieuBack/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/hospidieu
-spring.datasource.username=root
-spring.datasource.password=Simplon59!
+spring.datasource.username=slebrun
+spring.datasource.password=Simplon59
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
