--- a/hospidieuBack/src/main/resources/application.properties
+++ b/hospidieuBack/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Simplon59!
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+jwttoken.secret=mysecretkey
+jwttoken.expiration=300000
