--- a/hospidieuBack/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/hospidieuBack/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "spring.datasource1.jdbc-url",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.datasource1.jdbc-url'"
-}]}
+{"properties": [
+  {
+    "name": "spring.datasource1.jdbc-url",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.datasource1.jdbc-url'"
+  },
+  {
+    "name": "jwttoken.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'jwttoken.secret'"
+  }
+]}
